--- a/ecommerce.html
+++ b/ecommerce.html
@@ -171,26 +171,52 @@ permalink: /ecommerce
 
       <div class="row" id="pricing">
 
-  <center><h1>COTIZA TU SITIO DE COMERCIO ELECTRÓNICO</h1></center>
+  <center><h1>INICIEMOS</h1></center>
         <hr>
-        <p>Cotiza tu sitio de comercio electrónico y en seguida nos pondremos en contacto para ofrecer una propuesta personalizada ajustada a tu presupuesto y necesidades.
-          <br><br>
-          Para empresas ubicadas en Nicaragua, ofrecemos el servicio de E-Commerce en la plataforma <a href="http:/haycomercio.com" target="_blank">HayComercio.com</a> con precios accesibles para que comienzes a vender en línea inmediatamente.</p>
+        <p>Pague el 50% de cualquiera de nuestros paquetes por adelantado para iniciar el proceso y reciba 2 horas de consultoría (valoradas en más de $500) completamente gratis. Un representante le contactará al correo ó teléfono proporcionado por usted en la interfaz de pago de PayPal dentro de un período de 6 horas a partir de la realización del pago.</p>
         <br>
 <br>
-  <div class="snip1404">
-  <div class="plan nothing">
-  </div>
-  <div class="plan pro">
+        <div class="snip1404">
+  <div class="plan startup">
     <header>
       <h4 class="plan-title">
-        ECONÓMICO
+        STARTUP
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$249.99</span></div>
     </header>
     <ul class="plan-features">
       <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Para Empresas en Todo el Mundo</li>
-      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado con su propio sitio web</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado en su propio sitio web</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Carrito de Compras</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Checkout</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Pago Offline</li>
+      <li><i class=""> </i></li>
+            <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+    </ul>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ANWP98MVC8YNW">Iniciar</a></div>
+  </div>
+  <div class="plan pro">
+    <header>
+      <h4 class="plan-title">
+        PRO
+      </h4>
+      <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$299.99</span></div>
+    </header>
+    <ul class="plan-features">
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Para Empresas en Todo el Mundo</li>
+      <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado en su propio sitio web</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Carrito de Compras</li>
@@ -209,17 +235,45 @@ permalink: /ecommerce
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q887Z65489S52">Iniciar</a></div>
   </div>
   <div class="plan featured">
     <header>
       <h4 class="plan-title">
-        COMPLETO
+        PREMIUM
       </h4>
       <div class="plan-cost"><span class="plan-type">Desde </span><span class="plan-price">$599.99</span></div>
     </header>
     <ul class="plan-features">
-
+    <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Válido para Empresas en Todo el Mundo</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado dentro de su propio sitio web</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Catálogo de Productos (Con Imágenes y Videos)</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Carrito de Compras</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Checkout</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Múltiples Opciones de Pago (Tarjeta de crédito, PayPal, Bitcoin, etc...)</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Pagos Seguros</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Estado de Pedidos, Historial y Seguimiento</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Herramientas de promoción y códigos de descuento</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Cupones</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Tarjetas de Regalo Instantáneas</li>
+<li><i class="icon-checkmark" style="color:#ffffff;"> </i>Escalabilidad</li>
+      <li><i class=""> </i></li>
+            <li><i class=""> </i></li>
+            <li><i class=""> </i></li>
+            <li><i class=""> </i></li>
+    </ul>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KX9WKDMYRDBF4">Iniciar</a></div>
+  </div>
+  <div class="plan gold">
+    <header>
+      <h4 class="plan-title">
+        GOLD
+      </h4>
+      <div class="plan-cost"><span class="plan-price">$899.99</span><span class="plan-type"></span></div>
+    </header>
+    <ul class="plan-features">
+      
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Válido para Empresas en Todo el Mundo</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integrado dentro de su propio sitio web</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Sistema de Administración de contenido</li>
@@ -238,10 +292,11 @@ permalink: /ecommerce
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>SEO (Optimizado para Motores de Búsqueda)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Escalabilidad</li>
     </ul>
-    <div class="plan-select"><a href="http://fb.com/amsoftware.es/">Cotizar</a></div>
+    <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2ARPJ4FABUMKW">Iniciar</a></div>
   </div>
-  <div class="plan nothing">
-  </div>
+
+ 
+  
 </div>
 </div>
 
@@ -249,16 +304,17 @@ permalink: /ecommerce
     </div>
   </section>
   <!-- END section --> 
-
+<!--
   <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
-      <!--<p>.</p>-->
+      
         <div class="probootstrap-link-wrap">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
       </div>
 </div>
+-->
