--- a/about.html
+++ b/about.html
@@ -23,9 +23,11 @@ permalink: /nosotros
         <center><h1>SOLUCIONES DIGITALES SIN LÍMITES</h1></center>
         <hr><br>
 
-        <p>Somos una empresa joven, apasionada por la innovación y la tecnología, fundada en 2017 con la misión de ofrecer a las empresas, organizaciones y marcas de cualquier parte del mundo soluciones tecnológicas y estratégicas de última generación que les permitan incrementar sus utilidades, productividad, escalabilidad y desarrollar, adaptar, posicionar y hacer crecer sus marcas en el áltamente competitivo mercado de hoy, sea a nivel regional o global, en cualquier ámbito de industria, comercio o actividad a la que se dediquen.</p>
+        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con el objetivo de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
 
-        <p>Con más de 10 años de experiencia en análisis, diseño, desarrollo y administración de sistemas de software, sitios web, soluciones digitales y creación y desarrollo de marcas, garantizamos resultados que superan las expectativas de nuestros clientes. Tomamos a nuestros clientes de la mano en cada paso del proceso hacia encontrar la solución digital perfecta para ellos, que permitirá un crecimiento exponencial de su empresa y el posicionamiento de su marca.</p>
+        <p>AM Software también se ha dedicado a ofrecer el mejor servicio de desarrollo de software, soluciones tecnológicas de última generación, investigación y consultoría en materia de software, web, computación, tecnología e innovación a empresas, organizaciones y marcas de cualquier parte del mundo.</p>
+        
+        <p>Con más de 10 años de experiencia en análisis, diseño, desarrollo y administración de sistemas de software, tecnologías web, soluciones digitales, computación en la nube, investigación y consultoría, AM Software garantiza resultados excepcionales que superan las expectativas de nuestros clientes.</p>
 
         <!--<p>Nuestros proyectos garantizan la optimización de los recursos de información y producción de nuestros clientes mediante el diseño e implementación eficiente de sistemas informáticos personalizados de última generación que facilitan la planeación, organización, ejecución, control y administración a nivel intra- e inter-empresarial. </p>
 
@@ -108,6 +110,7 @@ permalink: /nosotros
   <!-- END section -->
 </div>
 
+<!--
   <section class="probootstrap-section">
     <div class="container">
       <div class="row">
@@ -223,7 +226,8 @@ permalink: /nosotros
         </div>
       </div>
     </div>
-</section><!-- END section -->
+</section>
+-->
 
   <!--<div class="container">
     <div class="probootstrap-cta probootstrap-animate">
@@ -302,7 +306,7 @@ permalink: /nosotros
     </div>
   </section>-->
   <!-- END section -->
-
+<!--
 <div class="container">
  <div class="probootstrap-cta probootstrap-animate">
           <center>
@@ -326,7 +330,8 @@ permalink: /nosotros
         </div>
       </div>
       
-    </div>
+</div>
+-->
     <br><br><br>
 
 </section>
