--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@ permalink: /contacto
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Enviar</a></p>
         </div>
           </form>
-
+<!--
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
-      <!--<p>.</p>-->
+      
         <div class="probootstrap-link-wrap">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
@@ -69,12 +69,12 @@ permalink: /contacto
             <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
-      <!--<p>.</p>-->
+
         <div class="probootstrap-link-wrap">
           <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p>
         </div>
       </div>
-    
+-->
     <br><br><br>
 
         </div>
@@ -106,7 +106,7 @@ permalink: /contacto
 
         <h4>Otras Redes</h4>
         <ul class="stack-link">
-              <li><a href="http://haycomercio.com">HayComercio.com</a></li>
+              <li><a href="http://hazcomercio.com">HazComercio.com</a></li>
               <!--<li><a href="">Blog</a></li>-->
               <li><a href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
               <li><a href="#">Upwork.com</a></li>
