--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@ permalink: /
         <center><h1>SOLUCIONES DIGITALES SIN LÍMITES</h1></center>
         <hr><br>
 
-        <p>Somos una empresa joven, apasionada por la innovación y la tecnología, fundada en 2017 con la misión de ofrecer a las empresas, organizaciones y marcas de cualquier parte del mundo soluciones tecnológicas y estratégicas de última generación que les permitan incrementar sus utilidades, productividad, escalabilidad y desarrollar, adaptar, posicionar y hacer crecer sus marcas en el áltamente competitivo mercado de hoy, sea a nivel regional o global, en cualquier ámbito de industria, comercio o actividad a la que se dediquen.</p>
+        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con el objetivo de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
 
-        <p>Con más de 10 años de experiencia en análisis, diseño, desarrollo y administración de sistemas de software, sitios web, soluciones digitales y creación y desarrollo de marcas, garantizamos resultados que superan las expectativas de nuestros clientes. Tomamos a nuestros clientes de la mano en cada paso del proceso hacia encontrar la solución digital perfecta para ellos, que permitirá un crecimiento exponencial de su empresa y el posicionamiento de su marca.</p>
+        <p>AM Software también se ha dedicado a ofrecer el mejor servicio de desarrollo de software, soluciones tecnológicas de última generación, investigación y consultoría en materia de software, web, computación, tecnología e innovación a empresas, organizaciones y marcas de cualquier parte del mundo.</p>
+       
+       <p>Con más de 10 años de experiencia en análisis, diseño, desarrollo y administración de sistemas de software, tecnologías web, soluciones digitales, computación en la nube, investigación y consultoría, AM Software garantiza resultados excepcionales que superan las expectativas de nuestros clientes.</p>
 
         <!--<p>Nuestros proyectos garantizan la optimización de los recursos de información y producción de nuestros clientes mediante el diseño e implementación eficiente de sistemas informáticos personalizados de última generación que facilitan la planeación, organización, ejecución, control y administración a nivel intra- e inter-empresarial. </p>
 
@@ -162,18 +164,21 @@ permalink: /
   <!-- END section -->
 </div>
 <br><br>
+<!--BOOK
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
-      <!--<p>.</p>-->
+
         <div class="probootstrap-link-wrap">
         <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
 </div>
+-->
+<!--projects>
 <br><br><br>
    <section class="probootstrap-section">
     <div class="container">
@@ -290,8 +295,8 @@ permalink: /
         </div>
       </div>
     </div>
-</section><!-- END section -->
-
+</section>
+-->
   <!--<div class="container">
     <div class="probootstrap-cta probootstrap-animate">
       <h2 class="mb20">Create a beautiful templates to benefits many.</h2>
@@ -301,18 +306,21 @@ permalink: /
   </div>-->
 
   <!-- END section cta -->
+
+<!--BOOK
       <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c2.png">
           </center>
-        <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
-      <!--<p>.</p>-->
+        <br>
+     <h2 class="mb20" style="color:#ffffff; font-size: 150%;">Aprende más sobre lo que significa tener una prescencia en línea y entérate por qué en el año 2019 si una empresa no tiene un sitio web, está literalmente muerta.</h2><br>
         <div class="probootstrap-link-wrap">
           <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
     </div>
+-->
 <br><br><br>
 <section class="probootstrap-slider flexslider">
 <ul class="slides">
@@ -828,10 +836,10 @@ permalink: /
     <div class="container">
       <div class="row">
 
-        <center><h1>BRANDING Y MARKETING DIGITAL</h1></center>
+        <center><h1>STUDIO</h1></center>
         <hr><br>
 
-        <p>Ofrecemos servicios de branding, comunicación y marketing digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
+        <p>Ofrecemos servicios de Comunicación, Diseño Gráfico, Producción Audiovisual, Animación 3D, 2D, Desarrollo de Realidad Aumentada (AR), Realidad Virtual(VR), Branding y Marketing Digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
 
         <p>Definimos problemas de comunicación e identidad corporativa que poseen nuestros clientes y delimitamos objetivos específicos para crear una conceptualización de estrategia comunicacional y visual junto con la producción de los elementos gráficos necesarios para el desarrollo y refinamiento de una imagen e identidad definida y efectiva que le brindará un mayor posicionamiento y competitividad a su marca. </p>
 
@@ -966,24 +974,25 @@ permalink: /
     <br><br>
       <h2 class="mb20">LLEVA TU MARCA A UN NUEVO NIVEL <br> Y EXPERIMENTA LOS BENEFICIOS INMEDIATAMENTE</h2>
       <p></p>
-      <center><p><a href="/branding#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
+      <center><p><a href="/studio#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
   </div>
 
   <!-- END section cta -->
 
 <br><br>
+<!--
 <div class="container">
         <div class="probootstrap-cta probootstrap-animate">
           <center>
             <img style="height:420px;max-width:100%;" src="img/sprites/c1.png">
           </center>
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">Conoce los beneficios que puede disfrutar tu empresa con un sitio de comercio electrónico y por qué al no tener uno está perdiendo a sus mejores clientes</h2><br>
-      <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
           <center><p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Descargar</a></p></center>
         </div>
       </div>
 </div>
+-->
 <br><br><br>
 
   <!--<section class="probootstrap-section">
