--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: AM Software | Soluciones Digitales Sin Límites
-permalink: /
+permalink: /e
 --- 
  
   <section class="probootstrap-slider flexslider">
@@ -843,7 +843,7 @@ permalink: /
 
         <p>Definimos problemas de comunicación e identidad corporativa que poseen nuestros clientes y delimitamos objetivos específicos para crear una conceptualización de estrategia comunicacional y visual junto con la producción de los elementos gráficos necesarios para el desarrollo y refinamiento de una imagen e identidad definida y efectiva que le brindará un mayor posicionamiento y competitividad a su marca. </p>
 
-<p>Soluciones de branding y marketing digital que ofrecemos:</p>
+<p>Soluciones de Comunicación, Branding y Marketing Digital que ofrecemos:</p>
 
       </div>
     <br><br>
