--- a/ecommerce.html
+++ b/ecommerce.html
@@ -204,6 +204,11 @@ permalink: /ecommerce
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+    </ul>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ANWP98MVC8YNW">Iniciar</a></div>
   </div>
@@ -234,6 +239,11 @@ permalink: /ecommerce
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
       <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+
+
+    </ul>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Q887Z65489S52">Iniciar</a></div>
   </div>
@@ -262,6 +272,11 @@ permalink: /ecommerce
             <li><i class=""> </i></li>
             <li><i class=""> </i></li>
             <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+      <li><i class=""> </i></li>
+
+    </ul>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KX9WKDMYRDBF4">Iniciar</a></div>
   </div>
