--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: AM Software | Soluciones Digitales Sin Límites
-permalink: /e
+permalink: /
 --- 
  
   <section class="probootstrap-slider flexslider">
