--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ permalink: /nosotros
     <br><div class="container">
       <div class="row">
 
-        <center><h1>SOLUCIONES DIGITALES SIN LÍMITES</h1></center>
+        <center><h1>CONSTRUYENDO EL FUTURO</h1></center>
         <hr><br>
 
         <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con el objetivo de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
