--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ permalink: /
  
   <section class="probootstrap-slider flexslider">
     <ul class="slides">
-      <li style="background-image: url(img/home.png);">
+      <li style="background-image: url(img/es_home.png);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
