--- a/index.html
+++ b/index.html
@@ -178,125 +178,125 @@ permalink: /
       </div>
 </div>
 -->
-<!--projects>
+
 <br><br><br>
-   <section class="probootstrap-section">
+    <section class="probootstrap-section">
     <div class="container">
       <div class="row">
         <div class="col-md-12 section-heading probootstrap-animate">
-          <h1>NUESTROS ÚLTIMOS PROYECTOS</h1>
+          <h1>ÚLTIMOS PROYECTOS</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.space"><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://nica.space">--><img src="img/projects/project-1.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.guru"><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://nica.guru">--><img src="img/projects/project-2.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://carfreak.club"><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://carfreak.club">--><img src="img/projects/project-6.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>        
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://hamburger.life"><img src="img/projects/project-4.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://hamburger.life">--><img src="img/projects/project-4.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://breakfast.center"><img src="img/projects/project-5.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://breakfast.center">--><img src="img/projects/project-5.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://billete.club"><img src="img/projects/billete.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://billete.club">--><img src="img/projects/billete.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://tcpnetwork.info"><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://tcpnetwork.info">--><img src="img/projects/project-10.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://homefort.club/proximamente"><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://homefort.club/proximamente">--><img src="img/projects/project-11.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://techfort.shop"><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://techfort.shop">--><img src="img/projects/project-12.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://haycomercio.com"><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.work"><img src="img/projects/work.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://nica.work">--><img src="img/projects/work.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://nica.website"><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://nica.website">--><img src="img/projects/sorteo.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://techfort.club"><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://techfort.club">--><img src="img/projects/project-7.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://supremefeeling.com"><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://supremefeeling.com">--><img src="img/projects/project-8.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
         </div>
       </div>
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <a target="_blank" href="http://getceed.com"><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""></a>
+              <!--<atarget="_blank" href="http://getceed.com">--><img src="img/projects/getceed.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
       </div>
     </div>
 </section>
--->
+
   <!--<div class="container">
     <div class="probootstrap-cta probootstrap-animate">
       <h2 class="mb20">Create a beautiful templates to benefits many.</h2>
