--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@ permalink: /nosotros
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card">
             <div class="probootstrap-card-media">
-              <!--<atarget="_blank" href="http://haycomercio.com">--><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
+              <!--<atarget="_blank" href="http://hazcomercio.com">--><img src="img/projects/project-3.png" class="img-responsive img-border" alt=""><!--</a>-->
             </div>
           </div>
         </div>
