--- a/software.html
+++ b/software.html
@@ -211,7 +211,7 @@ permalink: /software
         <br><h2 class="mb20" style="color:#ffffff; font-size: 150%;">CONTÁCTANOS Y CUÉNTANOS SOBRE TU EMPRESA O PROYECTO Y TE BRINDAREMOS UNA COTIZACIÓN PERSONALIZADA.</h2><br>
       <!--<p>.</p>-->
         <div class="probootstrap-link-wrap">
-          <center><p><a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a></p></center>
+          <center><a href="/contacto" role="button" class="btn btn-subscribe">Cotizar</a></center>
         </div>
 </div>
 
