--- a/ecommerce.html
+++ b/ecommerce.html
@@ -306,6 +306,7 @@ permalink: /ecommerce
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Integración de Blog </li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>SEO (Optimizado para Motores de Búsqueda)</li>
 <li><i class="icon-checkmark" style="color:#ffffff;"> </i>Escalabilidad</li>
+      <li><i class=""> </i></li>
     </ul>
     <div class="plan-select"><a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=2ARPJ4FABUMKW">Iniciar</a></div>
   </div>
