--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@ permalink: /contacto
               <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
             </div>
             <div class="probootstrap-link-wrap">
-          <p><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Enviar</a></p>
+          <center><a href="https://mailchi.mp/917b21d80251/amsoftware_subscribir" role="button" class="btn btn-subscribe">Enviar</a></center>
         </div>
           </form>
 <!--
