--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">CUÉNTANOS SOBRE TU PROYECTO Y TE BRINDAREMOS <br> LA MEJOR SOLUCIÓN POSIBLE</h2>
       <p></p>
-      <center><p><a href="/software#cta" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
+      <center><a href="/software#cta" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -697,7 +697,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">VENDE TUS PRODUCTOS O SERVICIOS EN LÍNEA <br> LAS 24 HORAS</h2>
       <p></p>
-      <center><p><a href="/ecommerce#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
+      <center><a href="/ecommerce#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -814,7 +814,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">CREAMOS TU SITIO WEB Y PRESCENCIA ONLINE<br> EN CUESTIÓN DE HORAS</h2>
       <p></p>
-      <center><p><a href="/web#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
+      <center><a href="/web#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
 <br><br><br>
@@ -839,7 +839,7 @@ permalink: /
         <center><h1>STUDIO</h1></center>
         <hr><br>
 
-        <p>Ofrecemos servicios de Comunicación, Diseño Gráfico, Producción Audiovisual, Animación 3D, 2D, Desarrollo de Realidad Aumentada (AR), Realidad Virtual(VR), Branding y Marketing Digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
+        <p>Ofrecemos servicios de Comunicación, Diseño Gráfico, Producción Audiovisual, Animación 3D, 2D, Desarrollo de Realidad Aumentada (AR), Realidad Virtual (VR), Branding y Marketing Digital. Creamos marcas completamente desde cero, y ayudamos a desarrollar a empresas con marcas existentes que desean mejorar su identidad e imagen corporativa con el fin de proyectarse a segmentos de mercado específicos, según su enfoque de trabajo, con objetivos determinados a través de estratégias de comunicación visual y corporativa.</p>
 
         <p>Definimos problemas de comunicación e identidad corporativa que poseen nuestros clientes y delimitamos objetivos específicos para crear una conceptualización de estrategia comunicacional y visual junto con la producción de los elementos gráficos necesarios para el desarrollo y refinamiento de una imagen e identidad definida y efectiva que le brindará un mayor posicionamiento y competitividad a su marca. </p>
 
@@ -974,7 +974,7 @@ permalink: /
     <br><br>
       <h2 class="mb20">LLEVA TU MARCA A UN NUEVO NIVEL <br> Y EXPERIMENTA LOS BENEFICIOS INMEDIATAMENTE</h2>
       <p></p>
-      <center><p><a href="/studio#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></p></center>
+      <center><a href="/studio#pricing" role="button" class="btn btn-subscribe">COTIZAR</a></center>
   </div>
 
   <!-- END section cta -->
