--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: AM Software | Nosotros
-permalink: /nosotros
+title: AM Software | Acerca
+permalink: /acerca
 ---
 
   <section class="probootstrap-slider flexslider">
