--- a/es_about.html
+++ b/es_about.html
@@ -23,7 +23,7 @@ permalink: /es/acerca
         <center><h1>CONSTRUYENDO EL FUTURO</h1></center>
         <hr><br>
 
-        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con el objetivo de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
+        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con la misión de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
 
         <p>AM Software también se ha dedicado a ofrecer el mejor servicio de desarrollo de software, soluciones tecnológicas de última generación, investigación y consultoría en materia de software, web, computación, tecnología e innovación a empresas, organizaciones y marcas de cualquier parte del mundo.</p>
         
