--- a/es_index.html
+++ b/es_index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: AM Software | Soluciones Digitales Sin Límites
-permalink: /
+permalink: /es/
 --- 
  
   <section class="probootstrap-slider flexslider">
@@ -74,10 +74,10 @@ permalink: /
     <br><div class="container">
       <div class="row">
 
-        <center><h1>SOLUCIONES DIGITALES SIN LÍMITES</h1></center>
+        <center><h1>CONSTRUYENDO EL FUTURO</h1></center>
         <hr><br>
 
-        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con el objetivo de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
+        <p>AM Software es una Startup fundada en 2017 por Andrés Montenegro con la misión de desarrollar software independiente que responde a problemas tangibles en la sociedad a distintos niveles (ej: Individual, Corporativo, etc…) e industrias (ej: Comercio, Bienes Raíces, etc…).</p>
 
         <p>AM Software también se ha dedicado a ofrecer el mejor servicio de desarrollo de software, soluciones tecnológicas de última generación, investigación y consultoría en materia de software, web, computación, tecnología e innovación a empresas, organizaciones y marcas de cualquier parte del mundo.</p>
        
