--- a/es_contact.html
+++ b/es_contact.html
@@ -84,8 +84,9 @@ permalink: /es/contacto
           <h4>Contacto</h4>
           <ul class="with-icon colored">
             <!--<li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>-->
-            <li><i class="icon-mail"></i><span>info@amsoftware.solutions</span></li>
+            <li><i class="icon-mail"></i><span>info@amsoftware.club</span></li>
             <li><i class="icon-phone2"></i><span>+1 (650) 209-8123</span></li>
+            <li><i class="icon-phone2"></i><span>(+506) 8570-4454</span></li>
             <li><i class="icon-phone2"></i><span>(+505) 8372-3756</span></li>
             <li><i class="icon-whatsapp"></i><span>(+505) 8582-1856</span></li>
           </ul>
@@ -106,11 +107,11 @@ permalink: /es/contacto
 
         <h4>Otras Redes</h4>
         <ul class="stack-link">
-              <li><a href="http://hazcomercio.com">HazComercio.com</a></li>
+              <li><a href="https://hazcomercio.com">HazComercio.com</a></li>
               <!--<li><a href="">Blog</a></li>-->
               <li><a href="https://www.reddit.com/r/AMSoftware/">Reddit.com</a></li>
-              <li><a href="#">Upwork.com</a></li>
-              <li><a href="https://www.fiverr.com/ams_solutions">Fiverr.com</a></li>
+              <!--<li><a href="#">Upwork.com</a></li>
+              <li><a href="https://www.fiverr.com/ams_solutions">Fiverr.com</a></li>-->
         </ul>
 <hr>
 
