Update and rename software.html to es_software.html

--- a/es_software.html
+++ b/es_software.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: AM Software | Software
-permalink: /software
+permalink: /es/software
 ---
 
   <section class="probootstrap-slider flexslider">
