Update and rename ecommerce.html to es_ecommerce.html

--- a/es_ecommerce.html
+++ b/es_ecommerce.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: AM Software | E-Commerce
-permalink: /ecommerce
+permalink: /es/ecommerce
 ---
 
   <section class="probootstrap-slider flexslider">
@@ -57,7 +57,7 @@ permalink: /ecommerce
               <div class="icon">
               <i class="icon-coin-dollar"></i>
             </div><div class="text">
-              <h3 class="heading">Procesamiento de Ordenes y Control de Inventario</h3></div><hr>
+              <h3 class="heading">Procesamiento de Órdenes y Control de Inventario</h3></div><hr>
               <p>Maneje su inventario y las ordenes recibidas así como control de ventas para dar el mejor servicio a sus clientes.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
