--- a/es_index.html
+++ b/es_index.html
@@ -587,8 +587,8 @@ permalink: /es/
               <i class="icon-coin-dollar"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Procesamiento de Ordenes y Control de Inventario</h3></div><hr>
-              <p>Maneje su inventario y las ordenes recibidas así como control de ventas para dar el mejor servicio a sus clientes.</p>
+              <h3 class="heading">Procesamiento de Órdenes y Control de Inventario</h3></div><hr>
+              <p>Maneje su inventario y las órdenes recibidas así como control de ventas para dar el mejor servicio a sus clientes.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
           </div>
