--- a/en_software.html
+++ b/en_software.html
@@ -58,7 +58,7 @@ permalink: /en/software
               <i class="icon-laptop3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Web applications</h3></div><hr>
+              <h3 class="heading">Web Applications</h3></div><hr>
               <p>Regardless of the industry; finance, automotive, agribusiness, e-commerce, retail and many more, AM Software has created applications for customers around the world. We create web applications with the highest standards and user experience that are also intended to increase your productivity and profits.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -71,7 +71,7 @@ permalink: /en/software
               <i class="icon-mobile3"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Mobile apps</h3></div><hr>
+              <h3 class="heading">Mobile Apps</h3></div><hr>
               <p>Mobile applications have become crucial in today's business environment. At AM Software, we create the highest quality mobile applications that adapt perfectly to the objectives and needs of your business.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
@@ -184,7 +184,7 @@ permalink: /en/software
               <i class="icon-lifebuoy"></i>
             </div>
             <div class="text">
-              <h3 class="heading">Technical support</h3></div><hr>
+              <h3 class="heading">Technical Support</h3></div><hr>
               <p>We provide a comprehensive and permanent technical support service for a wide range of companies in various industries.</p>
               <!--<p><a href="single-page.html">Más</a></p>-->
             </div>
