--- a/es_ecommerce.html
+++ b/es_ecommerce.html
@@ -285,7 +285,7 @@ permalink: /es/ecommerce
       <h4 class="plan-title">
         GOLD
       </h4>
-      <div class="plan-cost"><span class="plan-price">$899.99</span><span class="plan-type"></span></div>
+      <div class="plan-cost">span class="plan-type">Desde </span><span class="plan-price">$899.99</span><span class="plan-type"></span></div>
     </header>
     <ul class="plan-features">
       
